fix: order input is too small

--- a/src/code/css/wasabee.css
+++ b/src/code/css/wasabee.css
@@ -385,7 +385,7 @@
     padding: .25em
 }
 .wasabee-dialog-checklist .wasabee-table .order input {
-    width: 3rem;
+    width: 4rem;
 }
 .wasabee-dialog-perms .add-perm {
   display: grid;
